fixed: include overflow on preview when in mobile mode

--- a/src/apps/active-preview/Preview.less
+++ b/src/apps/active-preview/Preview.less
@@ -76,10 +76,15 @@
     //Height - TopBar - iframe(border-top):
     height: calc(100vh - 72px;);
 
+    &.Mobile {
+      overflow: auto;
+    }
+
     .center {
       display: flex;
       align-items: center;
       justify-content: center;
+      margin: 32px 0;
     }
 
     .NoDomain {
